# the-watcher

./: .gitignore  Cargo.toml  build.rs  tsconfig.json
src/: build.rs  config.rs  main.rs  serve.rs  state.rs  utils.rs
src/web/: ansi_up.ts  build.html  build_log.ts  main.ts
test/: config.toml
