[package]
name = "the-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["ws"] }
base62 = "2.2.4"
chrono = "0.4.45"
futures = "0.3.32"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs"] }
uuid = { version = "1.23.2", features = ["v7"] }
